Add Perfil / Cadastro estabelecimento
Adicionado página de perfil e cadastro de estabelecimento

Alteração visual na página saibamais
Responsividade nos comentários
Responsividade melhorada na saibamais

--- a/codigo/public/detalhespartida/partida.html
+++ b/codigo/public/detalhespartida/partida.html
@@ -54,7 +54,7 @@
         </div>
     </main>
     <script src="/assets/script/navbar.js"></script>
-    <script src=/assets/script/partida.js"></script>
+    <script src="/assets/script/partida.js"></script>
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
     <script src="//cdn.jsdelivr.net/npm/alertifyjs@1.14.0/build/alertify.min.js"></script>
 </body>
