--- a/codigo/public/saibamais/saibamais.html
+++ b/codigo/public/saibamais/saibamais.html
@@ -40,9 +40,9 @@
 
 
 <!-- SAIBA MAIS -->
-    <main class="sobre">
+    <main class="sobre p-lg-5 p-md-0">
         <div class="container-fluid" id="saibamais">
-            <div class="row mx-auto my-auto">
+            <div class="row mx-auto my-auto mb-1 text-center">
 
                 <h1 id="sobreprojeto"><strong>Sobre o projeto</strong></h1>
 
@@ -69,8 +69,11 @@
 
             </div>
 
-            <div>
-                <a href="/sugestoes/sugestoes.html"><button>AVALIAÇÕES</button></a>
+            <div class="container">
+                <div class="row">
+                    <a href="/sugestoes/sugestoes.html"><button class="btn btn-outline-success text-white w-100 h-100" id="avaliacao">AVALIAÇÕES</button></a>
+                </div>
+                
             </div>
     </main>
     <!-- SAIBA MAIS -->
