--- a/codigo/public/detalhespartida/partida.html
+++ b/codigo/public/detalhespartida/partida.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detalhes de partida</title>
     <link rel="shortcut icon" type="imagex/png" href="imgs/icone.ico">
-    <link rel="stylesheet" href="/assets/css/partida.css">
-    <link rel="stylesheet" href="/assets/css/navbar.css">
+    <link rel="stylesheet" href="../assets/css/partida.css">
+    <link rel="stylesheet" href="../assets/css/navbar.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
@@ -15,20 +15,20 @@
 <body>
     <header>
         <nav>
-            <a href="/index.html" class="logo"><img src="/assets/images/Logomarca.png" alt="Logomarca" class="Logomarca"></a>
+            <a href="../index.html" class="logo"><img src="../assets/images/Logomarca.png" alt="Logomarca" class="Logomarca"></a>
             <div class="mobile-menu">
                 <div class="line1"></div>
                 <div class="line2"></div>
                 <div class="line3"></div>
             </div>
             <ul class="nav-list">
-                <li><a href="#" style="color: #fff; text-decoration:none">Perfil</a></li>
-                <li><a href="#" style="color: #fff; text-decoration:none">Criar partidas privadas</a></li>
+                <li><a href="../perfil/perfil.html" style="color: #fff; text-decoration:none">Perfil</a></li>
+                <li><a href="../marcartorneio/marcatorneio.html" style="color: #fff; text-decoration:none">Criar partidas privadas</a></li>
                 <li><a href="#" style="color: #fff; text-decoration:none">Partidas anteriores</a></li>
-                <li><a href="/tutorial/tutorial.html" style="color: #fff; text-decoration:none">Como jogar</a></li>
-                <li><a href="/saibamais/saibamais.html" style="color: #fff; text-decoration:none">Sobre</a></li>
-                <li><button><a href="#" style="color: #fff; text-decoration:none">Cadastre-se</a></button></li>
-                <li><button><a href="#" style="color: #fff; text-decoration:none">Login</a></button></li>
+                <li><a href="../tutorial/tutorial.html" style="color: #fff; text-decoration:none">Como jogar</a></li>
+                <li><a href="../saibamais/saibamais.html" style="color: #fff; text-decoration:none">Sobre</a></li>
+                <li><button><a href="#" onclick = "cadastro()" style="color: #fff; text-decoration:none">Cadastre-se</a></button></li>
+                <li><button><a href="#" onclick = "login()" style="color: #fff; text-decoration:none">Login</a></button></li>
             </ul>
         </nav>
     </header>
@@ -53,8 +53,8 @@
             </div>
         </div>
     </main>
-    <script src="/assets/script/navbar.js"></script>
-    <script src="/assets/script/partida.js"></script>
+    <script src="../assets/script/navbar.js"></script>
+    <script src="../assets/script/partida.js"></script>
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
     <script src="//cdn.jsdelivr.net/npm/alertifyjs@1.14.0/build/alertify.min.js"></script>
 </body>
