--- a/codigo/public/index.html
+++ b/codigo/public/index.html
@@ -21,18 +21,18 @@
 <body>
     <header>
         <nav>
-            <a href="/index.html" class="logo"><img src="/assets/images/Logomarca.png" alt="Logomarca" class="Logomarca"></a>
+            <a href="./index.html" class="logo"><img src="./assets/images/Logomarca.png" alt="Logomarca" class="Logomarca"></a>
             <div class="mobile-menu">
                 <div class="line1"></div>
                 <div class="line2"></div>
                 <div class="line3"></div>
             </div>
             <ul class="nav-list">
-                <li><a href="#" style="color: #fff; text-decoration:none">Perfil</a></li>
-                <li><a href="#" style="color: #fff; text-decoration:none">Criar partidas privadas</a></li>
+                <li><a href="./perfil/perfil.html" style="color: #fff; text-decoration:none">Perfil</a></li>
+                <li><a href="./marcartorneio/marcatorneio.html" style="color: #fff; text-decoration:none">Criar partidas privadas</a></li>
                 <li><a href="#" style="color: #fff; text-decoration:none">Partidas anteriores</a></li>
-                <li><a href="/tutorial/tutorial.html" style="color: #fff; text-decoration:none">Como jogar</a></li>
-                <li><a href="/saibamais/saibamais.html" style="color: #fff; text-decoration:none">Sobre</a></li>
+                <li><a href="./tutorial/tutorial.html" style="color: #fff; text-decoration:none">Como jogar</a></li>
+                <li><a href="./saibamais/saibamais.html" style="color: #fff; text-decoration:none">Sobre</a></li>
                 <li><button><a href="#" onclick = "cadastro()" style="color: #fff; text-decoration:none">Cadastre-se</a></button></li>
                 <li><button><a href="#" onclick = "login()" style="color: #fff; text-decoration:none">Login</a></button></li>
             </ul>
@@ -63,8 +63,8 @@
             </div>
         </div>
     </main>
-    <script src="/assets/script/home.js"></script>
-    <script src="/assets/script/navbar.js"></script>
+    <script src="./assets/script/home.js"></script>
+    <script src="./assets/script/navbar.js"></script>
     <script src="//cdn.jsdelivr.net/npm/alertifyjs@1.14.0/build/alertify.min.js"></script>
 
 </body>
