--- a/codigo/public/perfil/perfil.html
+++ b/codigo/public/perfil/perfil.html
@@ -19,11 +19,11 @@
                 <div class="line3"></div>
             </div>
             <ul class="nav-list">
-                <li><a href=".//perfil/perfil.html" style="color: #fff; text-decoration:none">Perfil</a></li>
-                <li><a href="#" style="color: #fff; text-decoration:none">Criar partidas privadas</a></li>
+                <li><a href="../perfil/perfil.html" style="color: #fff; text-decoration:none">Perfil</a></li>
+                <li><a href="../marcartorneio/marcatorneio.html" style="color: #fff; text-decoration:none">Criar partidas privadas</a></li>
                 <li><a href="#" style="color: #fff; text-decoration:none">Partidas anteriores</a></li>
-                <li><a href="/tutorial/tutorial.html" style="color: #fff; text-decoration:none">Como jogar</a></li>
-                <li><a href="/saibamais/saibamais.html" style="color: #fff; text-decoration:none">Sobre</a></li>
+                <li><a href="../tutorial/tutorial.html" style="color: #fff; text-decoration:none">Como jogar</a></li>
+                <li><a href="../saibamais/saibamais.html" style="color: #fff; text-decoration:none">Sobre</a></li>
                 <li><button><a href="#" onclick = "cadastro()" style="color: #fff; text-decoration:none">Cadastre-se</a></button></li>
                 <li><button><a href="#" onclick = "login()" style="color: #fff; text-decoration:none">Login</a></button></li>
             </ul>
