--- a/codigo/public/cadastro/cadastro.html
+++ b/codigo/public/cadastro/cadastro.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet"  href="/assets/css/cadastro.css" />
+    <link rel="stylesheet"  href="../assets/css/cadastro.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@700&display=swap" rel="stylesheet">
@@ -14,7 +14,7 @@
 
     <div class="img-logo">
 
-        <img src="/assets/images/logo.png">
+        <a href="../index.html">  <img src="../assets/images/logo.png"></a>
 
     </div>
 
@@ -34,5 +34,5 @@
 </div>
     
 </body>
-<script src="/assets/script/cadastro-login.js"></script>
+<script src="../assets/script/cadastro-login.js"></script>
 </html>
