PÁGINA DE AVALIAÇÕES COMPÁTIVEL COM JSON DE USERS

--- a/codigo/public/sugestoes/sugestoes.html
+++ b/codigo/public/sugestoes/sugestoes.html
@@ -13,7 +13,7 @@
   
 </head>
 
-<body onload=CarregaComentario()>
+<body onload=CarregaComentarioGeral()>
   <header>
     <nav>
       <a href="../index.html" class="logo"><img src="../assets/images/Logomarca.png" alt="Logomarca" class="Logomarca"></a>
@@ -51,7 +51,7 @@
           </form>
           <button id="submit" onclick=EnviarComentario()>Enviar</button>
     
-          <div id="MeusComentarios" onload=MeusComentarios()>
+          <div id="MeusComentarios">
             <h2>Meus Comentarios</h2>
             <div id="MeusComentariosConteudo">
     
