--- a/codigo/public/marcartorneio/marcatorneio.html
+++ b/codigo/public/marcartorneio/marcatorneio.html
@@ -36,7 +36,7 @@
           <div class="container">
             <div class="left-panel">
                 <form id="form-partida">
-                    <label>Nome da Partida</label>
+                    <label>Nome do Torneio</label>
                     <input type="text" name="nome-partida">
                     <label>Endereço</label>
                     <input type="text" name="endereco">
@@ -48,7 +48,7 @@
                     <input type="text" name="contato">
                     <label>Maximo</label>
                     <input type="number" name="maximo">
-                    <label>Horário da partida</label>
+                    <label>Horário do torneio</label>
                     <input type="time" name="horario">
                     <button type="button" onclick="lerFormulario()">Enviar</button>
                 </form>
