--- a/codigo/public/login/login.html
+++ b/codigo/public/login/login.html
@@ -18,7 +18,7 @@
     <form>
         <h3>LOGIN</h3>
         
-        <input type="text" placeholder="usuário" id="username">
+        <input type="text" placeholder="email" id="username">
         <input type="password" placeholder="senha" id="password">
         <button type="button" onclick="logar()">logar</button>
 
