--- a/codigo/public/torneioprivado/torneioprivado.html
+++ b/codigo/public/torneioprivado/torneioprivado.html
@@ -47,6 +47,12 @@
                     <input type="number" name="maximo" id="maximo">
                     <label>Horário da partida</label>
                     <input type="time" name="horario" id="horario">
+                    <label>Telefone</label>
+                    <input type="text" name="telefone" id="telefone">
+                    <label>Email</label>
+                    <input type="text" name="email" id="email">
+                    <label>Senha</label>
+                    <input type="text" name="senha" id="senha">
                     <button type="button" onclick=lerFormulario()>Enviar</button>
                 </form>
             </div>
