--- a/codigo/public/torneioprivado/torneioprivado.html
+++ b/codigo/public/torneioprivado/torneioprivado.html
@@ -53,7 +53,7 @@
                     <input type="text" name="email" id="email">
                     <label>Senha</label>
                     <input type="text" name="senha" id="senha">
-                    <button type="button" onclick=lerFormulario()>Enviar</button>
+                    <button class="btn btn-secondary" type="button" onclick=lerFormulario()>Enviar</button>
                 </form>
             </div>
         </div>
