--- a/codigo/public/torneiopublico/torneiopublico.html
+++ b/codigo/public/torneiopublico/torneiopublico.html
@@ -50,7 +50,7 @@
                 <input type="date" id="data" name="data">
                 <label>Horário do torneio</label>
                 <input type="time" id="horario" name="horario">
-                <button class"btn btn-secondary" type="button" onclick="lerFormulario()">Enviar</button>
+                <button class="btn btn-secondary" type="button" onclick="lerFormulario()">Enviar</button>
             </form>
         </div>
     </div>
