MUDANÇA GERAL - ESTABELECIMENTOS

--- a/codigo/public/login/login.html
+++ b/codigo/public/login/login.html
@@ -21,6 +21,7 @@
         <input type="text" placeholder="email" id="username">
         <input type="password" placeholder="senha" id="password">
         <button type="button" onclick="logar()">logar</button>
+        <a href="../estabelecimento/loginestabelecimento.html"><button type="button" id="cadastroEstabelecimento" >ESTABELECIMENTO</button></a>
 
     </form>
 </body>
