--- a/codigo/public/cadastro/cadastro.html
+++ b/codigo/public/cadastro/cadastro.html
@@ -5,19 +5,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../assets/css/cadastro.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@700&display=swap" rel="stylesheet">
     <title>cadastro</title>
 </head>
 
 <body>
-
+    
     <div class="img-logo">
-
         <a href="../index.html"> <img src="../assets/images/logo.png"></a>
-
     </div>
 
     <div class="form">
@@ -39,6 +39,7 @@
                 </select>
             </div>
             <button type="button" onclick="cadastrar()">cadastrar</button>
+            <a href="../estabelecimento/cadastroestabelecimento.html"><button type="button" id="cadastroEstabelecimento" >ESTABELECIMENTO</button></a>
 
         </form>
 
@@ -46,5 +47,6 @@
 
 </body>
 <script src="../assets/script/cadastro-login.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
 </html>
