--- a/codigo/public/index.html
+++ b/codigo/public/index.html
@@ -21,7 +21,8 @@
 <body>
     <header>
         <nav>
-            <a href="./index.html" class="logo"><img src="./assets/images/Logomarca.png" alt="Logomarca" class="Logomarca"></a>
+            <a href="./index.html" class="logo"><img src="./assets/images/Logomarca.png" alt="Logomarca"
+                    class="Logomarca"></a>
             <div class="mobile-menu">
                 <div class="line1"></div>
                 <div class="line2"></div>
@@ -29,10 +30,12 @@
             </div>
             <ul class="nav-list" id="cadastro-login">
                 <li><a href="./perfil/perfil.html" style="color: #fff; text-decoration:none">Perfil</a></li>
-               <li><a href="./torneioprivado/torneioprivado.html" style="color: #fff; text-decoration:none">Marcar Torneio Privado</a></li>
-                 <!--<li><a href="#" style="color: #fff; text-decoration:none">Marcar Torneio Público</a></li>-->
+                <li><a href="./torneioprivado/torneioprivado.html" style="color: #fff; text-decoration:none">Marcar
+                        Torneio Privado</a></li>
+                <!--<li><a href="#" style="color: #fff; text-decoration:none">Marcar Torneio Público</a></li>-->
                 <li><a href="./tutorial/tutorial.html" style="color: #fff; text-decoration:none">Como jogar</a></li>
-                <li><a href="./saibamais/saibamais.html" style="color: #fff; text-decoration:none">Saiba Mais</a></li>     
+                <li><a href="./saibamais/saibamais.html" style="color: #fff; text-decoration:none">Saiba Mais</a></li>
+               
             </ul>
         </nav>
     </header>
