--- a/codigo/public/index.html
+++ b/codigo/public/index.html
@@ -42,7 +42,7 @@
     <main>
         <div class="container">
             <div class="row">
-                <h1 style="color: #06945C;">Partidas públicas</h1>
+                <h1 style="color: #06945C;">Torneios públicos</h1>
                 <div class="swiper mySwiper">
                     <div class="swiper-wrapper publicas">
                      
@@ -53,7 +53,7 @@
 
 
             <div class="row">
-                <h1 style="color: #06945C;">Partidas privadas</h1>
+                <h1 style="color: #06945C;">Torneios privados</h1>
                 <div class="swiper mySwiper">
                     <div class="swiper-wrapper privadas">
                       
