--- a/codigo/public/index.html
+++ b/codigo/public/index.html
@@ -35,7 +35,9 @@
                 <!--<li><a href="#" style="color: #fff; text-decoration:none">Marcar Torneio Público</a></li>-->
                 <li><a href="./tutorial/tutorial.html" style="color: #fff; text-decoration:none">Como jogar</a></li>
                 <li><a href="./saibamais/saibamais.html" style="color: #fff; text-decoration:none">Saiba Mais</a></li>
-               
+                <li id="cadastrobtn"><button><a href="#" onclick = "cadastro()" style="color: #fff; text-decoration:none">Cadastre-se</a></button></li>
+                <li id="loginbtn"><button><a href="#" onclick = "login()" style="color: #fff; text-decoration:none">Login</a></button></li>
+
             </ul>
         </nav>
     </header>
