--- a/codigo/public/tutorial/tutorial.html
+++ b/codigo/public/tutorial/tutorial.html
@@ -20,7 +20,7 @@
     <!-- CABECALHO DA PÁGINA -->
     <header>
         <nav>
-            <a href="./index.html" class="logo"><img src="./assets/images/Logomarca.png" alt="Logomarca"
+            <a href="../index.html" class="logo"><img src="../assets/images/Logomarca.png" alt="Logomarca"
                     class="Logomarca"></a>
             <div class="mobile-menu">
                 <div class="line1"></div>
