--- a/codigo/public/estabelecimento/estabelecimento.html
+++ b/codigo/public/estabelecimento/estabelecimento.html
@@ -31,7 +31,7 @@
 <body>
     <header>
         <nav>
-            <a href="./index.html" class="logo"><img src="./assets/images/Logomarca.png" alt="Logomarca"
+            <a href="../index.html" class="logo"><img src="../assets/images/Logomarca.png" alt="Logomarca"
                     class="Logomarca"></a>
             <div class="mobile-menu">
                 <div class="line1"></div>
