--- a/codigo/public/perfil/perfil.html
+++ b/codigo/public/perfil/perfil.html
@@ -13,7 +13,7 @@
 <body onload=CarregarDadosPerfil()>
     <header>
         <nav>
-            <a href="./index.html" class="logo"><img src="./assets/images/Logomarca.png" alt="Logomarca"
+            <a href="../index.html" class="logo"><img src="../assets/images/Logomarca.png" alt="Logomarca"
                     class="Logomarca"></a>
             <div class="mobile-menu">
                 <div class="line1"></div>
