PÁGINA DE MEUS TORNEIOS DO ESTABELECIMENTO
NAV MUDOU OS BOTÕES, AGORA É HREF EM VEZ DE JAVASCRIPT :)

--- a/codigo/public/saibamais/saibamais.html
+++ b/codigo/public/saibamais/saibamais.html
@@ -18,23 +18,20 @@
 <body>
     <header>
         <nav>
-            <a href="../index.html" class="logo"><img src="../assets/images/Logomarca.png" alt="Logomarca"
-                    class="Logomarca"></a>
+            <a href="../index.html" class="logo"><img src="../assets/images/Logomarca.png" alt="Logomarca" class="Logomarca"></a>
             <div class="mobile-menu">
                 <div class="line1"></div>
                 <div class="line2"></div>
                 <div class="line3"></div>
             </div>
             <ul class="nav-list" id="cadastro-login">
-                <li><a href="./perfil/perfil.html" style="color: #fff; text-decoration:none">Perfil</a></li>
-                <li><a href="./torneioprivado/torneioprivado.html" style="color: #fff; text-decoration:none">Marcar
-                        Torneio Privado</a></li>
-                <!--<li><a href="#" style="color: #fff; text-decoration:none">Marcar Torneio Público</a></li>-->
-                <li><a href="./tutorial/tutorial.html" style="color: #fff; text-decoration:none">Como jogar</a></li>
-                <li><a href="./saibamais/saibamais.html" style="color: #fff; text-decoration:none">Saiba Mais</a></li>
-                <li id="cadastrobtn"><button><a href="#" onclick = "cadastro()" style="color: #fff; text-decoration:none">Cadastre-se</a></button></li>
-                <li id="loginbtn"><button><a href="#" onclick = "login()" style="color: #fff; text-decoration:none">Login</a></button></li>
-
+                <li><a href="../perfil/perfil.html" style="color: #fff; text-decoration:none">Perfil</a></li>
+               <li><a href="../torneioprivado/torneioprivado.html" style="color: #fff; text-decoration:none">Marcar Torneio Privado</a></li>
+                 <!--<li><a href="#" style="color: #fff; text-decoration:none">Marcar Torneio Público</a></li>-->
+                <li><a href="../tutorial/tutorial.html" style="color: #fff; text-decoration:none">Como jogar</a></li>
+                <li><a href="../saibamais/saibamais.html" style="color: #fff; text-decoration:none">Saiba Mais</a></li>     
+                <li id="cadastrobtn"><button><a href="../cadastro/cadastro.html" style="color: #fff; text-decoration:none">Cadastre-se</a></button></li>
+                <li id="loginbtn"><button><a href="../login/login.html" style="color: #fff; text-decoration:none">Login</a></button></li>
             </ul>
         </nav>
     </header>
