--- a/codigo/public/estabelecimento/torneioestabelecimento.html
+++ b/codigo/public/estabelecimento/torneioestabelecimento.html
@@ -11,7 +11,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../assets/css/home.css">
+    <link rel="stylesheet" href="../assets/css/estabelecimento.css">
     <link rel="stylesheet" href="../assets/css/navbar.css">
     <link
         href="https://cdn.jsdelivr.net/gh/eliyantosarage/font-awesome-pro@main/fontawesome-pro-6.5.2-web/css/all.min.css"
@@ -39,14 +39,14 @@
                 <div class="line3"></div>
             </div>
             <ul class="nav-list" id="cadastro-login">
-                <li><a href="./perfil/perfil.html" style="color: #fff; text-decoration:none">Perfil</a></li>
-                <li><a href="./torneioprivado/torneioprivado.html" style="color: #fff; text-decoration:none">Marcar
+                <li><a href="../perfil/perfil.html" style="color: #fff; text-decoration:none">Perfil</a></li>
+                <li><a href="../torneioprivado/torneioprivado.html" style="color: #fff; text-decoration:none">Marcar
                         Torneio Privado</a></li>
                 <!--<li><a href="#" style="color: #fff; text-decoration:none">Marcar Torneio Público</a></li>-->
-                <li><a href="./tutorial/tutorial.html" style="color: #fff; text-decoration:none">Como jogar</a></li>
-                <li><a href="./saibamais/saibamais.html" style="color: #fff; text-decoration:none">Saiba Mais</a></li>
-                <li id="cadastrobtn"><button><a href="#" onclick = "cadastro()" style="color: #fff; text-decoration:none">Cadastre-se</a></button></li>
-                <li id="loginbtn"><button><a href="#" onclick = "login()" style="color: #fff; text-decoration:none">Login</a></button></li>
+                <li><a href="../tutorial/tutorial.html" style="color: #fff; text-decoration:none">Como jogar</a></li>
+                <li><a href="../saibamais/saibamais.html" style="color: #fff; text-decoration:none">Saiba Mais</a></li>
+                <li id="cadastrobtn"><button><a href="../cadastro/cadastro.html" style="color: #fff; text-decoration:none">Cadastre-se</a></button></li>
+                <li id="loginbtn"><button><a href="../login/login.html" style="color: #fff; text-decoration:none">Login</a></button></li>
 
             </ul>
         </nav>
@@ -55,7 +55,7 @@
     <main>
         <div class="container">
             <div class="row">
-                <h1 style="color: #06945C;">Partidas públicas</h1>
+                <h1 style="color: #06945C;">Meus Torneios</h1>
                 <div class="swiper mySwiper">
                     <div class="swiper-wrapper publicas">
 
@@ -65,7 +65,7 @@
             </div>
         </div>
     </main>
-    <script src="../assets/script/home.js"></script>
+    <script src="../assets/script/torneioestabelecimento.js"></script>
     <script src="../assets/script/navbar.js"></script>
     <script src="//cdn.jsdelivr.net/npm/alertifyjs@1.14.0/build/alertify.min.js"></script>
 
