--- a/codigo/public/detalhespartida/partida.html
+++ b/codigo/public/detalhespartida/partida.html
@@ -23,7 +23,7 @@
                 <div class="line3"></div>
             </div>
             <ul class="nav-list" id="cadastro-login">
-                <li><a href="../perfil/perfil.html" style="color: #fff; text-decoration:none">Perfil</a></li>
+                <li><a id="perfilnavbar" href="../perfil/perfil.html" style="color: #fff; text-decoration:none">Perfil</a></li>
                 <li><a href="../torneioprivado/torneioprivado.html" style="color: #fff; text-decoration:none">Marcar
                         Torneio Privado</a></li>
                 <!--<li><a href="#" style="color: #fff; text-decoration:none">Marcar Torneio Público</a></li>-->
@@ -31,6 +31,8 @@
                 <li><a href="../saibamais/saibamais.html" style="color: #fff; text-decoration:none">Saiba Mais</a></li>
                 <li id="cadastrobtn"><button><a href="#" onclick = "cadastro()" style="color: #fff; text-decoration:none">Cadastre-se</a></button></li>
                 <li id="loginbtn"><button><a href="#" onclick = "login()" style="color: #fff; text-decoration:none">Login</a></button></li>
+                <li id="deslogarbtn"><button><a href="#" onclick="deslogar()"
+                    style="color: #fff; text-decoration:none">Deslogar</a></button></li>
 
             </ul>
         </nav>
