--- a/codigo/public/torneiopublico/torneiopublico.html
+++ b/codigo/public/torneiopublico/torneiopublico.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../assets/css/torneiopublico.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="../assets/css/navbar.css">
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.14.0/build/css/alertify.min.css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Tacada Certa</title>
 </head>
@@ -18,7 +19,7 @@
             <div class="line3"></div>
         </div>
         <ul class="nav-list">
-            <li><a href="../perfil/perfil.html" style="color: #fff; text-decoration:none">Perfil</a></li>
+            <li><a id="perfilnavbar" href="../perfil/perfil.html" style="color: #fff; text-decoration:none">Perfil</a></li>
             <li><a href="../marcartorneio/marcatorneio.html" style="color: #fff; text-decoration:none">Criar partidas privadas</a></li>
             <li><a href="#" style="color: #fff; text-decoration:none">Partidas anteriores</a></li>
             <li><a href="../tutorial/tutorial.html" style="color: #fff; text-decoration:none">Como jogar</a></li>
@@ -27,6 +28,8 @@
             <li><button><a href="#" onclick="login()" style="color: #fff; text-decoration:none">Login</a></button></li>
             <li id="cadastrobtn"><button><a href="../cadastro/cadastro.html" style="color: #fff; text-decoration:none">Cadastre-se</a></button></li>
                 <li id="loginbtn"><button><a href="../login/login.html" style="color: #fff; text-decoration:none">Login</a></button></li>
+                <li id="deslogarbtn"><button><a href="#" onclick="deslogar()"
+                    style="color: #fff; text-decoration:none">Deslogar</a></button></li>
         </ul>
     </nav>
     </header>
@@ -38,15 +41,7 @@
             <form id="form-partida">
                 <label>Nome do Torneio</label>
                 <input type="text" id="nome-partida" name="nome-partida">
-                <label>CEP</label>
-                <input type="text" id="cep" name="cep">
-                <label>Endereço</label>
-                <input type="text" id="endereco" name="endereco">
-                <label>E-mail</label>
-                <input type="email" id="email" name="email">
-                <label>Telefone</label>
-                <input type="text" id="telefone" name="telefone">
-                <label>Maximo</label>
+                <label>Capacidade de Pessoas</label>
                 <input type="number" id="maximo" name="maximo">
                 <label>Dia</label>
                 <input type="date" id="data" name="data">
@@ -60,5 +55,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="../assets/script/torneiopublico.js"></script>
     <script src="../assets/script/navbar.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/alertifyjs@1.14.0/build/alertify.min.js"></script>
+
 </body>
 </html>
