PARTIDA PRIVADA AGORA MOSTRA QUEM ESTA CONVIDADO

--- a/codigo/public/estabelecimento/loginestabelecimento.html
+++ b/codigo/public/estabelecimento/loginestabelecimento.html
@@ -21,8 +21,10 @@
                 <div class="line3"></div>
             </div>
             <ul class="nav-list" id="cadastro-login">
-                <li><a id="perfilnavbar" href="../perfil/perfil.html" style="color: #fff; text-decoration:none">Perfil</a></li>
-               <li><a href="../torneioprivado/torneioprivado.html" style="color: #fff; text-decoration:none">Marcar Torneio Privado</a></li>
+                <li><a id="perfilnavbar" href="#" onclick=perfil()
+                    style="color: #fff; text-decoration:none">Perfil</a></li>
+            <li><a href="#" onclick=torneioprivado() style="color: #fff; text-decoration:none">Marcar
+                    Torneio Privado</a></li>
                  <!--<li><a href="#" style="color: #fff; text-decoration:none">Marcar Torneio Público</a></li>-->
                 <li><a href="../tutorial/tutorial.html" style="color: #fff; text-decoration:none">Como jogar</a></li>
                 <li><a href="../saibamais/saibamais.html" style="color: #fff; text-decoration:none">Saiba Mais</a></li>
