--- a/codigo/public/tutorial/tutorial.html
+++ b/codigo/public/tutorial/tutorial.html
@@ -8,7 +8,8 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    
+        <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.14.0/build/css/alertify.min.css" />
+
     <link rel="stylesheet" href="../assets/css/navbar.css">
     <link rel="stylesheet" href="../assets/css/tutorial.css">
     
@@ -27,14 +28,18 @@
                 <div class="line3"></div>
             </div>
             <ul class="nav-list" id="cadastro-login">
-                <li><a id="perfilnavbar" href="../perfil/perfil.html" style="color: #fff; text-decoration:none">Perfil</a></li>
-               <li><a href="../torneioprivado/torneioprivado.html" style="color: #fff; text-decoration:none">Marcar Torneio Privado</a></li>
+                <li><a id="perfilnavbar" href="#" onclick=perfil()
+                    style="color: #fff; text-decoration:none">Perfil</a></li>
+            <li><a href="#" onclick=torneioprivado() style="color: #fff; text-decoration:none">Marcar
+                    Torneio Privado</a></li>
                  <!--<li><a href="#" style="color: #fff; text-decoration:none">Marcar Torneio Público</a></li>-->
                 <li><a href="../tutorial/tutorial.html" style="color: #fff; text-decoration:none">Como jogar</a></li>
                 <li><a href="../saibamais/saibamais.html" style="color: #fff; text-decoration:none">Saiba Mais</a></li> 
-                <li id="cadastrobtn"><button><a href="../cadastro/cadastro.html" style="color: #fff; text-decoration:none">Cadastre-se</a></button></li>
-                <li id="loginbtn"><button><a href="../login/login.html" style="color: #fff; text-decoration:none">Login</a></button></li> 
-                <li id="deslogarbtn"><button><a href="#" onclick="deslogar()"
+                <li id="cadastrobtn"><button onclick="cadastro()"><a href="#" 
+                    style="color: #fff; text-decoration:none">Cadastre-se</a></button></li>
+        <li id="loginbtn"><button onclick="login()"><a href="#" 
+                    style="color: #fff; text-decoration:none">Login</a></button></li>
+        <li id="deslogarbtn"><button onclick="deslogar()"><a href="#" 
                     style="color: #fff; text-decoration:none">Deslogar</a></button></li>
             </ul>
         </nav>
@@ -553,6 +558,8 @@
 
     <script src="../assets/script/tutorialscript.js"></script>
     <script src="../assets/script/navbar.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/alertifyjs@1.14.0/build/alertify.min.js"></script>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
