PÁGINA TERMINADA, TORNEIOS PUBLICOS FUNCIONAIS
amém

--- a/codigo/public/detalhespartida/partida.html
+++ b/codigo/public/detalhespartida/partida.html
@@ -54,8 +54,16 @@
                         <li id="nomeLocal" class="list-group-item p-5 fs-5"></li>
                         <li id="descricao" class="list-group-item p-5 fs-5"></li>
                         <li id="horario" class="list-group-item p-5 fs-5"></li>
-                        <li class="list-group-item p-5 fs-5"><button id="btnParticipar" class="btnParticipar" >Participar</button></li>
+                        <li class="list-group-item p-5 fs-5"><button id="btnParticipar" class="btnParticipar" onclick=ParticiparPartida() >Participar</button></li>
                         <li id="contato" class="list-group-item p-5 fs-5">Contato</li>
+                        <li id="jogadores" class="list-group-item p-5 fs-5">
+                            <div class="container">
+                                <h3 class="mb-4">Convidados:</h3>
+                                <div class="row" id="convidados">
+                                    
+                                </div>
+                            </div>
+                        </li>
                       </ul>
                 </div>
             </div>
