--- a/codigo/public/mostrartorneioprivado/mostrartorneioprivado.html
+++ b/codigo/public/mostrartorneioprivado/mostrartorneioprivado.html
@@ -56,7 +56,7 @@
                         <li id="horario" class="list-group-item p-5 fs-5"></li>
                         <li class="list-group-item p-5 fs-5"><button id="btnParticipar" class="btnParticipar" onclick=ParticiparPartida()>Participar</button></li>
                         <li id="contato" class="list-group-item p-5 fs-5">Contato</li>
-                        <li id="senha" class="list-group-item p-5 fs-5">
+                        <li id="jogadores" class="list-group-item p-5 fs-5">
                             <div class="container">
                                 <h3 class="mb-4">Convidados:</h3>
                                 <div class="row" id="convidados">
