--- a/codigo/public/perfil/perfil.html
+++ b/codigo/public/perfil/perfil.html
@@ -5,8 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Perfil</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../assets/css/perfil.css">
     <link rel="stylesheet" href="../assets/css/navbar.css">
+    
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.14.0/build/css/alertify.min.css"/>
 </head>
 
@@ -64,10 +66,30 @@
             <div class="match-list" id="matchList">
             </div>
         </section>
+        <div class="modal fade" id="PartidaModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                aria-hidden="true">
+                <div class="modal-dialog bg-success">
+                    <div class="modal-content bg-success">
+                        <div class="modal-header d-flex justify-content-around" style="background-color: #00603A;">
+                            <h1 class="modal-title fs-5 text-white" id="tituloModal">Modal title</h1>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body bg-success d-flex justify-content-center ">
+                            <input type="text" id="senhapraentrar" placeholder="Senha">
+                        </div>
+                        <div class="bg-success d-flex justify-content-around mb-2">
+                            <button type="button" id="idtorneio" class="btn btn-warning" data-bs-dismiss="modal"
+                                onclick=ValidarSenhaTorneioPrivado(this.id)>Entrar</button>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
     </main>
 
     <script src="../assets/script/perfil.js"></script>
     <script src="../assets/script/navbar.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="//cdn.jsdelivr.net/npm/alertifyjs@1.14.0/build/alertify.min.js"></script>
 </body>
 
