DOCUMENTADO E MUDANÇA NO TITLE DE CADA PAG

--- a/codigo/public/estabelecimento/loginestabelecimento.html
+++ b/codigo/public/estabelecimento/loginestabelecimento.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro do Estabelecimento</title>
+    <title>Tacada Certa - Login de Estabelecimento</title>
+    <link rel="shortcut icon" type="imagex/png" href="../assets/images/icone.ico">
+
     <link rel="stylesheet" href="../assets/css/estabelecimento.css">
     <link rel="stylesheet" href="../assets/css/navbar.css">
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.14.0/build/css/alertify.min.css"/>
