--- a/codigo/public/mostrartorneioprivado/mostrartorneioprivado.html
+++ b/codigo/public/mostrartorneioprivado/mostrartorneioprivado.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Detalhes de partida</title>
+    <title>Tacada Certa - Criar Partida Privada</title>
+    <link rel="shortcut icon" type="imagex/png" href="../assets/images/icone.ico">
+
     <link rel="shortcut icon" type="imagex/png" href="../assets/images/icone.ico">
     <link rel="stylesheet" href="../assets/css/partida.css">
     <link rel="stylesheet" href="../assets/css/navbar.css">
