--- a/codigo/public/cadastro/cadastro.html
+++ b/codigo/public/cadastro/cadastro.html
@@ -11,7 +11,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@700&display=swap" rel="stylesheet">
-    <title>cadastro</title>
+    <title>Tacada Certa - Cadastro</title>
+    <link rel="shortcut icon" type="imagex/png" href="../assets/images/icone.ico">
 </head>
 
 <body>
