--- a/codigo/public/estabelecimento/torneioestabelecimento.html
+++ b/codigo/public/estabelecimento/torneioestabelecimento.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="imagex/png" href="./assets/images/icone.ico">
-    <title>Tacada certa</title>
+    <title>Tacada Certa - Torneios de Estabelecimento</title>
+    <link rel="shortcut icon" type="imagex/png" href="../assets/images/icone.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
