--- a/codigo/public/login/login.html
+++ b/codigo/public/login/login.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="/assets/css/login.css"/>
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.14.0/build/css/alertify.min.css"/>
     
-    <title>login</title>
+    <title>Tacada Certa - Login</title>
+    <link rel="shortcut icon" type="imagex/png" href="../assets/images/icone.ico">
+
 </head>
 <body>
     <div class="img-logo">
