--- a/codigo/public/torneioprivado/torneioprivado.html
+++ b/codigo/public/torneioprivado/torneioprivado.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="../assets/css/navbar.css">
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.14.0/build/css/alertify.min.css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <title>Tacada Certa</title>
+    <title>Tacada Certa - Torneio Privado</title>
+    <link rel="shortcut icon" type="imagex/png" href="../assets/images/icone.ico">
+
 </head>
 <body>
     <header>
